--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MenJeremy.github.io/keymap-editor",
   "name": "keymap-editor",
   "version": "1.0.0",
   "description": "",
@@ -7,7 +8,7 @@
     "postinstall": "cd application && npm install",
     "start": "node index.js",
     "dev": "cross-env ENABLE_DEV_SERVER=true node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "gh-pages": "^3.2.3"
   }
 }
