--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "cd application && npm install",
     "start": "node index.js",
     "dev": "cross-env ENABLE_DEV_SERVER=true node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
